--- a/09-api/package.json
+++ b/09-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^18.1.0",
+    "joi": "^14.3.1",
     "mongoose": "^5.8.5",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
