--- a/09-api/package.json
+++ b/09-api/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
+    "hapi-swagger": "^9.1.3",
+    "inert": "^5.1.3",
     "joi": "^14.3.1",
     "mongoose": "^5.8.5",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "mocha": "^7.0.0"
