--- a/09-api/package.json
+++ b/09-api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.8.1",
