--- a/09-api/package.json
+++ b/09-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "boom": "^7.3.0",
+    "dotenv": "^8.2.0",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.8.1",
     "hapi-swagger": "^9.1.3",
