--- a/09-api/src/config/.env.prod
+++ b/09-api/src/config/.env.prod
@@ -1,6 +1,6 @@
 JWT_KEY=MEU_SEGREDÃO_123
 PORT=4000
 SALT_PWD=3
-MONGODB_URL=mongodb://douglaslb:admin@localhost:27017/heroes
+MONGODB_URL=mongodb+srv://douglaslb:douglaslb00@heroes-4lbdu.mongodb.net/test?retryWrites=true&w=majority
 POSTGRES_URL=postgres://douglaslb:my_secret_pw@localhost/heroes
 SSL_DB=true
